samples/_failures_safe/1761452734_d48653_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b6ab11f.c: In function ‘main’:
./samples/SAFE/__tmp_1b6ab11f.c:176:12: error: missing terminating " character
  176 |     printf("State machine terminated
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1b6ab11f.c:176:5: error: expected expression at end of input
  176 |     printf("State machine terminated
      |     ^~~~~~
./samples/SAFE/__tmp_1b6ab11f.c:176:5: error: expected declaration or statement at end of input
